fix: dark mode and header

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
 body {
   margin: 0;
@@ -90,7 +86,10 @@ ol {
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
-  .dark {
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
